# persistent-taggable

./: README.md  persistent-taggable.cabal  sample.hs
Database/Persist/Query/Taggable/: Sql.hs  SqlInternal.hs
tests/: test.hs
