name:              persistent-taggable
version:           0.0.0
license:           BSD3
author:            Takahiro HIMURA
maintainer:        taka@himura.jp
category:          Database
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/himura/persistent-taggable

source-repository head
  type: git
  location: git@himura.jp:cgrepos-haskell.git

library
    build-depends: base >= 4 && < 5
                 , transformers >= 0.2 && < 0.4
                 , monad-logger >= 0.2
                 , text
                 , conduit >= 0.5 && < 0.6
                 , persistent >= 1.0
    ghc-options: -Wall -threaded
    exposed-modules:
        Database.Persist.Query.Taggable.Sql
    other-modules:
