name:              persistent-taggable
version:           0.2.0
license:           BSD3
author:            Takahiro HIMURA
maintainer:        taka@himura.jp
category:          Database
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/himura/persistent-taggable

source-repository head
  type: git
  location: git@himura.jp:cgrepos-haskell.git

library
    build-depends: base >= 4 && < 5
                 , transformers >= 0.2 && < 0.4
                 , monad-logger >= 0.3
                 , conduit >= 1.0
                 , persistent >= 1.2
                 , esqueleto >= 1.2.2
    ghc-options: -Wall -threaded
    exposed-modules:
        Database.Persist.Query.Taggable.Sql

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests, .
  main-is:           test.hs
  build-depends:
      base >= 4.0 && < 5
    , transformers-base
    , transformers >= 0.2 && < 0.4
    , text
    , conduit >= 1.0
    , monad-logger
    , persistent
    , persistent-sqlite
    , persistent-template
    , esqueleto
    , hspec
    , hspec-expectations
  ghc-options:       -Wall

